--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -1,4 +1,43 @@
-<div class="row">
-  <div class="span4">
-  </div>
+<div class="row pull-right">
+  <input ng-model="searchText"
+         ng-change="globalSearch(searchText)" 
+         type="text"
+         placeholder="search"
+         id="searchForm">
 </div>
+
+<span class="columns">
+  <div class="types span2 " ng-init="types=init_types()">
+    <h2>Types</h2>
+    <ul class="unstyled">
+      <li ng-repeat="type in types">
+        <div class="type-select">
+          <a ng-click="get_categories(type)" id="{{type}}">{{type}}</a>
+        </div>
+        <br>
+    </ul>
+  </div>
+
+  <div class="categories span2">
+    <h2>Categories</h2>
+    <ul class="unstyled">
+      <li ng-repeat="cat in categories">
+        <div class="type-select">
+          <a ng-click="get_results(type, cat)" id="{{cat}}">{{cat}}</a>
+        </div>
+        <br>
+    </ul>
+  </div>
+
+  <div class="results span4">
+    <h2>Results</h2>
+    <ul class="unstyled">
+      <li ng-repeat="result in results">
+        <div class="results">
+          <div id="title">{{result.title}}</div>
+          <div id="content">{{result.content}}</div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</span>
