--- a/static/partials/note.html
+++ b/static/partials/note.html
@@ -1,11 +1,11 @@
-<div class="categories span3">
+<div ng-init="cats = get_categories('note')" class="categories span3">
   <h2>Categories</h2>
   <ul class="unstyled">
     <li ng-repeat="cat in categories">
       <div class="type-select">
         <a ng-click="get_results(type, cat)" id="{{cat}}">{{cat}}</a>
       </div>
-      <br>
+    </li>
   </ul>
 </div>
 
@@ -13,8 +13,8 @@
   <ul class="unstyled">
     <li ng-repeat="result in results">
       <div class="results">
-        <div id="title">{{result.title}}</div>
-        <div id="content">{{result.content}}</div>
+        <div id="note-title">{{result.title}}</div>
+        <div id="note-content">{{result.content}}</div>
       </div>
     </li>
   </ul>
